[gd_scene load_steps=6 format=2]

[ext_resource path="res://boundary/boundary.gd" type="Script" id=1]
[ext_resource path="res://sound/impactMetal_light_004.ogg" type="AudioStream" id=2]
[ext_resource path="res://sound/impactMetal_heavy_001.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 16 )

[node name="Boundary" type="StaticBody2D"]
position = Vector2( 640, -8 )
scale = Vector2( 64.2306, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Shape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerHitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="BallHitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="SoundDetactArea2D" type="Area2D" parent="."]

[node name="Shape2D" type="CollisionShape2D" parent="SoundDetactArea2D"]
shape = SubResource( 2 )
[connection signal="body_entered" from="SoundDetactArea2D" to="." method="_on_SoundDetactArea2D_body_entered"]
[connection signal="body_exited" from="SoundDetactArea2D" to="." method="_on_SoundDetactArea2D_body_exited"]
